--- a/client/public/index.html
+++ b/client/public/index.html
@@ -41,9 +41,9 @@
 
 
   </head>
-  <body class="bg-gray-200">
+  <body >
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
-    <div id="root" class="bg-gray-200"></div>
+    <div id="root" ></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
